moving to springboot and arranged admin privileges